<resources>
    <string name="app_name">NotesApp</string>
    <string name="create_note">Create note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="data_text">"Past date and time: "</string>
    <string name="name_data_text">"Set date: "</string>
    <string name="year_text">" year."</string>
    <string name="menu_setting">Setting</string>
    <string name="nav_name">Pasha</string>
    <string name="nav_surname">Kuznetsov</string>
    <string name="nav_note">Notes</string>
    <string name="nav_basket">Basket</string>
    <string name="nav_person">Person</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="redact">Redact</string>
    <string name="delete">Delete</string>
    <string name="set_time">Set time:</string>
    <string name="set_time_bth">Set time</string>
    <string name="set_data_bth">Set data</string>
    <string name="exit">Exit</string>
    <string name="questionExit">Your real have exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="appClose">Application close</string>
</resources>