<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.NoteEditActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/note_edit_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/create_note" />
    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/head_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:textSize="@dimen/head_text_size"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:textSize="@dimen/description_text_size" />

            <TextView
                android:id="@+id/data_text_view_create_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:text="@string/data_text"
                android:textSize="@dimen/old_data" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
            <TextView
                android:id="@+id/name_data_text_view_create_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:paddingTop="@dimen/head_text_size"
                android:text="@string/name_data_text"
                android:textSize="@dimen/description_text_size" />
            <TextView
                android:id="@+id/text_view_set_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                />

</LinearLayout>
            <Button
                android:id="@+id/button_set_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_data_bth" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/name_time_text_view_create_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/set_time"
                android:paddingTop="@dimen/head_text_size"
                android:text="@string/set_time"
                android:textSize="@dimen/description_text_size" />
            <TextView
                android:id="@+id/text_view_set_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                />
        </LinearLayout>
            <Button
                android:id="@+id/button_set_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_time_bth" />




        </LinearLayout>
    </ScrollView>

</LinearLayout>